# intrinsic_calibration_ceres

./: .gitignore  CMakeLists.txt  doc  main.cpp  readme.md
calib_images/synth/: info.yml  readme.md  readme.txt
calib_images/synth/output/: calibration_result.yml
calib_images/webcam/: readme.txt
calib_images/webcam/output/: calibration_result.yml
include/ceres_calibration/: ceres_intrinsic_calib.h  pattern_view_reprojection_error.h  synth_circle_projections_generator.h
src/: ceres_intrinsic_calib.cpp  image_capture.cpp  snippets.cpp
src/programs/: image_capture.cpp  main.cpp  synthetic_data_generator.cpp
src/tests/: test_full.cpp
